--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
             />
             <h4 class="font-semibold">Membrana Plasmática</h4>
             <p>Barreira protectora e seletiva para entrada/saída de substâncias.</p>
+            <img
+              src="../imagens/membrana.jpg"
+              alt="membrana"
+              class="imagens2">
           </article>
         </div>
       </div>
