--- a/menu.html
+++ b/menu.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Menu de Idiomas</title>
+  <link rel="stylesheet" href="estilos-menu.css"> <!-- CSS externo -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> <!-- Tailwind -->
 </head>
-<body>
-    
-</body>
-</html>
-
 <body>
   <header class="bg-blue-600 text-white py-6 shadow-lg">
     <div class="container mx-auto px-4 text-center">
@@ -17,10 +14,12 @@
       <p class="text-lg">Uma introdução visual e interativa para seu trabalho de biologia</p>
     </div>
   </header>
-  <!-- Menu de idiomas centralizado e com botões grandes -->
+
+  <!-- Menu de idiomas centralizado e com botões estilizados -->
   <nav class="menu-idiomas">
     <button class="idioma-btn" onclick="window.location.href='index.html'">Português</button>
     <button class="idioma-btn" onclick="window.location.href='indexen.html'">English</button>
     <button class="idioma-btn" onclick="window.location.href='indexes.html'">Español</button>
   </nav>
 </body>
+</html>
